--- a/src/NzbDrone.Core/NzbDrone.Core.csproj
+++ b/src/NzbDrone.Core/NzbDrone.Core.csproj
@@ -882,6 +882,7 @@
     <Compile Include="Music\AddArtistService.cs" />
     <Compile Include="Music\AddArtistValidator.cs" />
     <Compile Include="Music\Album.cs" />
+    <Compile Include="Music\Entity.cs" />
     <Compile Include="Music\Artist.cs" />
     <Compile Include="Music\ArtistMetadata.cs" />
     <Compile Include="Music\ArtistAddedHandler.cs" />
@@ -1330,6 +1331,7 @@
       <Version>2.5.0</Version>
     </PackageReference>
     <PackageReference Include="SpotifyAPI.Web" Version="4.2.0" />
+    <PackageReference Include="Equ" Version="2.2.0" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
