New: Fail build on unexpected test failures
Ignore Mac results for now

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -279,6 +279,7 @@ stages:
           testResultsFormat: 'NUnit'
           testResultsFiles: '**/TestResult.xml'
           testRunTitle: '$(osName) Unit Tests'
+          failTaskOnFailedTests: ne(variables['osName'], 'Mac')
 
   - stage: Integration_Automation
     displayName: Integration / Automation
@@ -340,6 +341,7 @@ stages:
           testResultsFormat: 'NUnit'
           testResultsFiles: '**/TestResult.xml'
           testRunTitle: '$(osName) Integration Tests'
+          failTaskOnFailedTests: true
         displayName: Publish Test Results
 
     - job: Automation
@@ -411,6 +413,7 @@ stages:
           testResultsFormat: 'NUnit'
           testResultsFiles: '**/TestResult.xml'
           testRunTitle: '$(osName) Automation Tests'
+          failTaskOnFailedTests: ne(variables['osName'], 'Mac')
         displayName: Publish Test Results
 
   - stage: Analyze
