--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -229,12 +229,15 @@ stages:
           Linux:
             osName: 'Linux'
             imageName: 'ubuntu-16.04'
+            failBuild: true
           Mac:
             osName: 'Mac'
             imageName: 'macos-10.13'
+            failBuild: false
           Windows:
             osName: 'Windows'
             imageName: 'vs2017-win2016'
+            failBuild: true
 
       pool:
         vmImage: $(imageName)
@@ -279,7 +282,7 @@ stages:
           testResultsFormat: 'NUnit'
           testResultsFiles: '**/TestResult.xml'
           testRunTitle: '$(osName) Unit Tests'
-          failTaskOnFailedTests: $[ne(variables['osName'], 'Mac')]
+          failTaskOnFailedTests: $(failBuild)
 
   - stage: Integration_Automation
     displayName: Integration / Automation
@@ -351,14 +354,17 @@ stages:
             osName: 'Linux'
             imageName: 'ubuntu-16.04'
             pattern: 'Lidarr.**.linux.tar.gz'
+            failBuild: true
           Mac:
             osName: 'Mac'
             imageName: 'macos-10.13' # Fails due to firefox not being installed on image
             pattern: 'Lidarr.**.osx.tar.gz'
+            failBuild: false
           Windows:
             osName: 'Windows'
             imageName: 'vs2017-win2016'
             pattern: 'Lidarr.**.windows.zip'
+            failBuild: true
 
       pool:
         vmImage: $(imageName)
@@ -413,7 +419,7 @@ stages:
           testResultsFormat: 'NUnit'
           testResultsFiles: '**/TestResult.xml'
           testRunTitle: '$(osName) Automation Tests'
-          failTaskOnFailedTests: $[ne(variables['osName'], 'Mac')]
+          failTaskOnFailedTests: $(failBuild)
         displayName: Publish Test Results
 
   - stage: Analyze
